# dh-python

./: .gitignore  Makefile  README.rst  dh_pypy  dh_pypy.rst  dh_python2  dh_python2.rst  dh_python3  dh_python3.rst  pybuild  pybuild.rst
autoscripts/: postinst-py3compile  prerm-py3clean  prerm-pypyclean
debian/: changelog  control  copyright  docs  links  manpages  postrm  preinst  prerm  rules
debian/patches/: backports.patch  fix_fallback_code_for_shlex.quote.patch  fix_pybuild.pm_when_PYBUILD_INTERPRETERS_is_set.patch  series  update_default_and_supported_python_versions.patch
debian/tests/: control  dh-python  dh-python2  nosetests  pybuild  pybuild-py2  run-installed
dh/: pybuild.pm
dhpython/: __init__.py  _defaults.py  debhelper.py  depends.py  files.py  fs.py  interpreter.py  pydist.py  tools.py  version.py
pydist/: Makefile  cpython2_fallback  cpython3_fallback  generate_fallback_list.py  pypy_fallback
tests/: Makefile  common.mk  test_debhelper.py  test_depends.py  test_fs.py  test_interpreter.py  test_tools.py
tests/t101/: Makefile
tests/t201/: Makefile  setup.py
tests/t202/: Makefile  __init__.py  bar.py  foo.py
tests/t203/: Makefile  setup.py
tests/t204/: Makefile  bar.py  baz.py
tests/t205/: Makefile
tests/t206/: Makefile  bar.py  baz.py  egg  foo.py
tests/t207/: Makefile  bar.py  baz.py  foo.py  spam.py
tests/tpb05/: Makefile  pyproject.toml  setup.py
tests/tpb05/debian/: control  rules
tests/tpb06/: LICENSE  Makefile  setup.cfg  setup.py
tests/tpb06/debian/: control  copyright
tests/tpb06/foo/: __init__.py
(+97 files in other folders)
